Add general ticket SLA search endpoint
